Fix first two paragraphs styling
Removed the paragraph css that made all paragraphs too large in text
size. A little concerned that the first paragraph is a little small but
it is still larger than the second and no font size for P1 was
dictated as part of the assignment.

--- a/style.css
+++ b/style.css
@@ -12,11 +12,7 @@ body{
     font-size: 14px;
     font-weight: 800;
   }
-  
-  .para {
-    font-size: 22px;
-  }
-  
+   
   .confirm {
     background: green;
     color: white;
